# internship

./: .gitattributes  cafferan.py  proba.py
andrej/: ak_1_micrograd.py  ak_2_micrograd.py  ak_3_makemore.py  ak_4_makemore.py  ak_5_makemore.py  ak_6_makemore.py  ak_7_makemore.py  ak_8_makemore.py
asyncio_tutorial/: api.py  main.py  second_example.py  third_example.py
cmake_opencv/: README.md
cmake_opencv/v1/: CMakeLists.txt
cmake_opencv/v2/: CMakeLists.txt  main.cpp
cmake_opencv/v3/: .gitignore  CMakeLists.txt  main.cpp
cmake_opencv/v4_cuda/: CMakeLists.txt  main.cc
cplusplus/: CMakeLists.txt
driverID/: .gitignore  README.md  recognition.py
drowsiness/: README.md
eye/: ITrackerData.py  ITrackerModel.py  eye_tracking.py  main.py  phone_cam_capture.py  prepare_dataset.py  unzip.py  using_the_model.py
face/: drowsiness.py  drowsiness_2.py  drowsiness_3.py  drowsiness_4.py  mediapipe_proba.py  mtcnn_proba.py  murtaza.py  rishab1.py  rishab2.py  zeus.py
face/FR_anja/: add_data.py  encode_gen.py  main.py
face/FR_softver/: log.txt  main.py  test.py  util.py
face/FR_softver/db/: anja.pickle
face/FR_softver/src/: anti_spoof_predict.py
face/anja_recognition/: classifier.py  data_preprocess.py  detect_face.py  facenet.py  preprocess.py
gazecapture/: ITrackerData.py  README.md  infer_basler_mediapipe.py  infer_dlib.py  infer_mediapipe.py  main.py  resize_224x244.py  unzip.py
heart_rate/rPPG/: prvi_test.py
opencv-build/: main.cpp
opencv-build/dlib-opencv/: CMakeLists.txt  drowsiness.cc  main.cpp
prvi/: CMakeLists.txt  README.md  dlib_opencv.cc  dlib_test.cc  docs_opencv.cc  opencv_test.cc  pytorch_test.cc
ros2_basics/: README.md
ros2_basics/1_ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_basics/1_ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_basics/1_ros2_ws/src/my_robot_controller/: package.xml  setup.py
ros2_basics/1_ros2_ws/src/my_robot_controller/my_robot_controller/: draw_circle.py  first_node.py  pose_subscriber.py  pub_sub.py
ros2_basics/custom_interfaces/src/my_cplus_pkg/: CMakeLists.txt  package.xml
ros2_basics/custom_interfaces/src/my_cplus_pkg/src/: my_first_node.cpp
ros2_basics/custom_interfaces/src/my_py_pkg/: package.xml  setup.py
ros2_basics/custom_interfaces/src/my_py_pkg/my_py_pkg/: my_first_node.py
ros2_basics/custom_interfaces/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_basics/custom_interfaces/src/my_robot_interfaces/msg/: TargetCoordinates.msg
ros2_basics/launch/: launch_file.py
ros2_basics/pub_sub_service/: readme.txt
ros2_basics/pub_sub_service/src/pub_subcallback/: package.xml  setup.cfg  setup.py
ros2_basics/pub_sub_service/src/pub_subcallback/pub_subcallback/: pub_sub.py
ros2_ws/: README.md
ros2_ws/src/custom_interfaces/: CMakeLists.txt
ros2_ws/src/custom_interfaces/msg/: LandmarksArray.msg
ros2_ws/src/system/: package.xml  setup.cfg  setup.py
ros2_ws/src/system/system/: gaze_capture.py  roi_face.py
ros2_ws/src/system/system/gaze/: starting.py
ros2_ws2/: .gitignore
ros2_ws2/launch/: launch_file.py
ros2_ws2/src/custom_interfaces/: package.xml
ros2_ws2/src/custom_interfaces/msg/: Gaze.msg
ros2_ws2/src/system/system/: eye_viewer.py  get_eyes.py  gui.py  landm_node.py  landm_node2.py  webcam_pub.py
ros2_ws2/src/system/system/gaze/: ITrackerModel.py
udemy/: cnns.py  make_limited_datasets.py  resnet_1.py  resnet_2.py  use_pretrained_weights.py  util.py
yolo/: README.md  object_detec.py  rt_count.py  videoinfo.py
