cmake_minimum_required(VERSION 3.8)
project(my_cplus_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(my_robot_interfaces REQUIRED)

add_executable(cpp_node src/my_first_node.cpp)
ament_target_dependencies(cpp_node rclcpp my_robot_interfaces)

instal(TARGETS
  cpp_node
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
